--- a/aula14ex/ex017/modelo.html
+++ b/aula14ex/ex017/modelo.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Contador</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Vamos Contar</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
         <div>
-            <p>Início: <input type="number" name="nI" id="nI"></p> 
-            <p>Fim: <input type="number" name="nF" id="nF"></p>
-            <p>Passo: <input type="number" name="nP" id="nP"></p>
-            <p><input type="button" value="Contar" onclick="contador()" ></p>
-            
+            <p>Número: <input type="number" name="num" id="num">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
-        <div id="res">
-            
+        <div>
+            <select name="tabuadaa" id="seltab" size="10"></select>
         </div>
     </section>
     <footer>
